--- a/index.html
+++ b/index.html
@@ -1,8 +1,3 @@
-Hello World
-good morning
-besant
-tech
-electronic city
-bangalore
-electronic city phase-1
-refs/remotes/origin/master
+new web page
+
+new line to check github webhook triger 
